2018-09-19  Carlos O'Donell  <carlos@redhat.com>

	* stdlib/tst-setcontext9.c (f1): Rename to...
	(f1a): ... this.
	(f1b): New function implementing lower half of f1 in alternate stack.

2018-09-20  Florian Weimer  <fweimer@redhat.com>

	* misc/tst-gethostid.c: New file.
	* misc/Makefile [$(build-shared)] (tests): Add tst-gethostid.
	(tst-gethostid): Link with -ldl.

2018-09-20  Mingli Yu  <Mingli.Yu@windriver.com>

	* sysdeps/unix/sysv/linux/gethostid.c (gethostid): Check for NULL
	value from gethostbyname_r.

2018-09-06  Stefan Liebler  <stli@linux.ibm.com>

	* sysdeps/unix/sysv/linux/spawni.c (maybe_script_execute):
	Increment size of new_argv by one.

2018-08-28  Florian Weimer  <fweimer@redhat.com>

	[BZ #23578]
	* posix/tst-regcomp-truncated.c: New file.
	* posix/Makefile (tests): Add it.
	(tst-regcomp-truncated.out): Depend on generated locales.

2018-08-25  Paul Eggert  <eggert@cs.ucla.edu>

	[BZ #23578]
	regex: fix uninitialized memory access
	I introduced this bug into gnulib in commit
	8335a4d6c7b4448cd0bcb6d0bebf1d456bcfdb17 dated 2006-04-10;
	eventually it was merged into glibc.  The bug was found by
	project-repo <bugs@feusi.co> and reported here:
	https://lists.gnu.org/r/sed-devel/2018-08/msg00017.html
	Diagnosis and draft fix reported by Assaf Gordon here:
	https://lists.gnu.org/r/bug-gnulib/2018-08/msg00071.html
	https://lists.gnu.org/r/bug-gnulib/2018-08/msg00142.html
	* posix/regex_internal.c (build_wcs_upper_buffer):
	Fix bug when mbrtowc returns 0.

2018-08-27 Martin Kuchta  <martin.kuchta@netapp.com>
	   Torvald Riegel  <triegel@redhat.com>

	[BZ #23538]
	* nptl/pthread_cond_common.c (__condvar_quiesce_and_switch_g1):
	Update r to include the set wake-request flag if waiters are
	remaining after spinning.

2018-08-03  DJ Delorie  <dj@redhat.com>

	* sysdeps/riscv/rvf/math_private.h (libc_feholdexcept_setround_riscv):
	Move libc_fesetround_riscv after libc_feholdexcept_riscv.

	* sysdeps/riscv/rv64/rvd/libm-test-ulps: Update.
